--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2707,7 +2707,7 @@ input, select, textarea {
 
 /* Tiles */
 
-	.tiles {
+	/* .tiles {
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -2893,11 +2893,11 @@ input, select, textarea {
 					width: 100% !important;
 				}
 
-		}
+		} */
 
 
 /* Tiles2 */
-.tiles2 {
+.tiles {
 	display: -moz-flex;
 	display: -webkit-flex;
 	display: -ms-flex;
@@ -3017,27 +3017,33 @@ input, select, textarea {
 		}
 
 		.tiles article:nth-child(6n - 5):before {
-			background-color: #6fc3df;
+			/* background-color: #6fc3df; */
+			background-color: #1D3557;
 		}
 
 		.tiles article:nth-child(6n - 4):before {
-			background-color: #8d82c4;
+			/* background-color: #8d82c4; */
+			background-color: #457B9D;
 		}
 
 		.tiles article:nth-child(6n - 3):before {
-			background-color: #ec8d81;
+			/* background-color: #ec8d81; */
+			background-color: #A8DADC;
 		}
 
 		.tiles article:nth-child(6n - 2):before {
-			background-color: #e7b788;
+			/* background-color: #e7b788; */
+			background-color: #F1FAEE;
 		}
 
 		.tiles article:nth-child(6n - 1):before {
-			background-color: #8ea9e8;
+			/* background-color: #8ea9e8; */
+			background-color: #EC9A9A;
 		}
 
 		.tiles article:nth-child(6n):before {
-			background-color: #87c5a4;
+			/* background-color: #87c5a4; */
+			background-color: #E63946;
 		}
 
 	@media screen and (max-width: 1280px) {
@@ -3446,27 +3452,33 @@ input, select, textarea {
 		}
 
 			#header.alt.style1 .logo strong {
-				color: #6fc3df;
+				/* color: #6fc3df; */
+				color: #1D3557;
 			}
 
 			#header.alt.style2 .logo strong {
-				color: #8d82c4;
+				/* color: #8d82c4; */
+				color: #457B9D;
 			}
 
 			#header.alt.style3 .logo strong {
-				color: #ec8d81;
+				/* color: #ec8d81; */
+				color: #A8DADC;
 			}
 
 			#header.alt.style4 .logo strong {
-				color: #e7b788;
+				/* color: #e7b788; */
+				color: #F1FAEE;
 			}
 
 			#header.alt.style5 .logo strong {
-				color: #8ea9e8;
+				/* color: #8ea9e8; */
+				color: #EC9A9A;
 			}
 
 			#header.alt.style6 .logo strong {
-				color: #87c5a4;
+				/* color: #87c5a4; */
+				color: #E63946;
 			}
 
 		body.is-preload #header.alt {
@@ -3678,27 +3690,32 @@ input, select, textarea {
 			}
 
 		#banner.style1:after {
-			background-color: #6fc3df;
+			/* background-color: #6fc3df; */
+			background-color: #1D3557;
 		}
 
 		#banner.style2:after {
-			background-color: #8d82c4;
+			/* background-color: #8d82c4; */
+			background-color: #457B9D;
 		}
 
 		#banner.style3:after {
-			background-color: #ec8d81;
+			/* background-color: #ec8d81; */
+			background-color: #A8DADC;
 		}
 
 		#banner.style4:after {
-			background-color: #e7b788;
+			/* background-color: #e7b788; */
+			background-color: #F1FAEE;
 		}
 
 		#banner.style5:after {
-			background-color: #8ea9e8;
+			/* background-color: #8ea9e8; */
+			background-color: #EC9A9A;
 		}
 
 		#banner.style6:after {
-			background-color: #87c5a4;
+			background-color: #E63946;
 		}
 
 		body.is-preload #banner:after {
@@ -4264,32 +4281,38 @@ input, select, textarea {
 		} */
 
 		.members article:nth-child(6n - 5):before {
-			background-color: #6fc3df;
+			/* background-color: #6fc3df; */
+			background-color: #1D3557;
 			margin-right: 1%;
 		}
 
 		.members article:nth-child(6n - 4):before {
-			background-color: #8d82c4;
+			/* background-color: #8d82c4; */
+			background-color: #457B9D;
 			margin-left: 1%;
 		}
 
 		.members article:nth-child(6n - 3):before {
-			background-color: #ec8d81;
+			/* background-color: #ec8d81; */
+			background-color: #A8DADC;
 			margin-right: 1%;
 		}
 
 		.members article:nth-child(6n - 2):before {
-			background-color: #e7b788;
+			/* background-color: #e7b788; */
+			background-color: #F1FAEE;
 			margin-left: 1%;
 		}
 
 		.members article:nth-child(6n - 1):before {
-			background-color: #8ea9e8;
+			/* background-color: #8ea9e8; */
+			background-color: #EC9A9A;
 			margin-right: 1%;
 		}
 
 		.members article:nth-child(6n):before {
-			background-color: #87c5a4;
+			/* background-color: #87c5a4; */
+			background-color: #E63946;
 			margin-left: 1%;
 		}
 
